fixed header gap

--- a/style.css
+++ b/style.css
@@ -576,6 +576,10 @@ grid-area: a;
 
 /*story page CSS*/
 
+.storytitle{
+  text-align: center;
+}
+
 .caption{
 font-family: "Roboto", sans-serif;
 font-weight: bold;
@@ -604,6 +608,7 @@ text-align: center;
   font-size: 20px;
   margin-top: 5px;
   margin-bottom: 0px;
+  text-align:center;
 }
 
 .storycards {
@@ -611,7 +616,6 @@ text-align: center;
   padding:10px;
 	list-style: none;
   display: grid;
-  grid-gap: 20px;
   grid-template-areas:
   "a"
   "b"
@@ -629,6 +633,8 @@ border-radius: 5px;
 
 .storycard2{
   grid-area:b;
+  margin-top: 1em;
+  border-bottom: 2px solid #000000;
 }
 
 .storycard3{
@@ -636,9 +642,9 @@ border-radius: 5px;
 }
 
 
-article {
+/*article {
   margin-bottom: 0.7em;
-}
+}*/
 
 /*@media screen and (min-width:480px){
   .storycards{
@@ -656,7 +662,6 @@ article {
   display: block;
   width: 75%;
   height:auto;
-  margin-top: 0.5em;
   margin:auto;
   }
 }
